# odp-platform-qemu-arm-virt

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Common.mk  Makefile  NOTICE  README.md
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
.github/workflows/: build-container.yml  build-os.yml  build.yml  check-submodules.yml  check.yml  update-submodules.yml
.husky/: pre-commit
bios/: Makefile
common/tools/emulators/: run.sh
docs/: devcontainer.md  e2e-tests.md  winhec-demo.md
e2e-tests/: .gitignore  Cargo.toml  Makefile  README.md  startup.nsh
e2e-tests/.cargo/: config.toml
e2e-tests/coverage-plugin/: Makefile  coverage.c  qemu-plugin.h
e2e-tests/ffa/: Cargo.toml
e2e-tests/ffa/src/: lib.rs  partition_info.rs  smc.rs
e2e-tests/scripts/: pcs-to-lcov.py
e2e-tests/test-support/: Cargo.toml
e2e-tests/test-support/src/: lib.rs
e2e-tests/tests/battery/: Cargo.toml
e2e-tests/tests/battery/src/: main.rs
e2e-tests/tests/thermal/: Cargo.toml
e2e-tests/tests/thermal/src/: main.rs
e2e-tests/tests/tpm/: Cargo.toml
e2e-tests/tests/tpm/src/: main.rs
e2e-tests/uart-logger/: Cargo.toml
e2e-tests/uart-logger/src/: lib.rs
mod/: Makefile  README.md
mod/secure-services/: Makefile  README.md
mod/secure-services/.cargo/: config.toml
mod/secure-services/platform/: Cargo.toml  build.rs
mod/secure-services/platform/linker/: qemu-ec-sp.dts  qemu.ld
mod/secure-services/platform/src/: main.rs
mod/secure-services/platform/src/baremetal/: interrupt.rs  mod.rs  panic.rs
mod/secure-services/platform/src/baremetal/services/: mod.rs  passthrough_service.rs  thermal.rs
mod/uefi/: Makefile  README.md
mod/uefi/platform/QemuArmVirtPkg/AcpiTables/: thermal.asl
mod/uefi/platform/QemuSbsaPkg/AcpiTables/: AcpiTables.inf  Dsdt.asl  Gtdt.aslc  battery.asl  ec.asl  fan.asl  ffa.asl  rtc.asl  thermal.asl
os-image/: Makefile  README.md
postbuild/os/: .gitignore  Makefile  README.md
postbuild/os/prebuilt/: README.md  driverlist.txt  winvos.ps1
scripts/: dc-run.sh  push-devcontainer-cache.sh  qemu-ec-wrapper.sh  test-e2e.sh  test-serial.sh  test-sp-ec-link.sh  test-sp-services.sh
scripts/lib/: ec-qemu.sh  host-qemu.sh  swtpm.sh
secure-services/: Makefile  README.md
secure-services/platform/: Cargo.toml  README.md
secure-services/platform/linker/: qemu-ec-sp.dts  qemu.ld
secure-services/platform/src/: main.rs
secure-services/platform/src/baremetal/: interrupt.rs  uart.rs
secure-services/platform/src/baremetal/services/: battery.rs  time_alarm.rs
spm/: Makefile
src/: main.rs
test-serial-vdrive/: .gitignore  startup.nsh
tf-a/: Makefile
tf-a/platform/config/: qemu_sbsa_stmm_config.dts  sp_layout.json  stmm.fd
uefi/: Makefile
