# Dummy root crate used solely to drive husky-rs git hook installation.
# Running `cargo build` or `cargo test` here will configure `.husky/` as
# the git hooks directory via husky-rs's build script.
#
# The pre-commit hook checks formatting and runs clippy on the real Rust
# projects (e2e-tests and secure-services/platform).

[package]
name = "odp-platform-hooks"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
husky-rs = "0.3"
