# Cargo package manifest for the battery E2E test application.
#
# SPDX-License-Identifier: MIT
#

[package]
name = "battery"
version = "0.1.0"
edition = "2021"

[dependencies]
ffa = { path = "../../ffa" }
test-support = { path = "../../test-support" }
uefi = { version = "0.34", features = [
    "panic_handler",
    "alloc",
    "global_allocator",
] }
log = { version = "0.4", default-features = false }
