[package]
name = "thermal"
version = "0.1.0"
edition = "2021"

[dependencies]
ffa = { path = "../../ffa" }
uart-logger = { path = "../../uart-logger" }
uefi = { version = "0.34", features = ["panic_handler", "alloc", "global_allocator"] }
log = { version = "0.4", default-features = false }
uuid = { version = "1.0", default-features = false, features = ["v1"] }
